--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => 'reload' %>
   </head>
 
-  <body>
+  <body id="<%= "#{controller.controller_name}-#{controller.action_name}" %>" class="<%= "#{controller.controller_name}" %>">
     <%= yield %>
   </body>
 </html>
