design with bootstrap

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,75 +1,78 @@
 <div class="row">
-  <h1>Bonjour, I’m Philippe.</h1>
-  <p>
-    I love to make things — especially websites. SumOfUs, I think you should hire me.
-  </p>
-</div>
-<div class="row">
-  <h2>Why are you applying for this job? (Suggested word limit: 125)</h2>
-  <p class='answer-text'>
-    I loved your job description, your cause and I was done when reading your values (https://docs.google.com/document/d/1VftkSfLBYWT4iiowMyrSdDgCuL0MXLkbji5-4sVgz-o/edit). I know we are made to work together, you guys values match mine and a good book said: Look for cultural fit, over competence. (The book is tribal leadership, and my pinky tell me you read it. Or maybe it was good to great)
-
-    and googled Neal, Tuuli and Omar
-  </p>
-  <p>
-    <span class='counter'></span> words
-  </p>
+  <div class="jumbotron">
+    <h1 class="display-3">Bonjour.</h1>
+    <hr class="m-y-2">
+    <p class="lead">I love to make things — especially great things. SumOfUs, I think you should hire me.</p>
+  </div>
 </div>
 
 <div class="row">
-  <h2>What's one idea, big or small, that you have for how technology can be used to advance social progress? (Suggested word limit: 200)</h2>
-  <p class='answer-text'>
-  Advancing social progress is an ambiguous word. It can have a lot of meaning, my definition behind it is how we can move people toward the right direction, because we can also move them to the wrong direction. Technology now enable to reach millions of people from a single click bringing them together when they are not browsing for cats pictures. So my little idea is to use that reach and make content that will either make people reflect and think. And let a chain of positive ideas spread unconsciously. Some people argue that this won’t make a difference and I don’t know if it makes a difference. But that won’t keep me away from trying.
+  <ul class="list-group">
+    <li class="list-group-item">
+      <h2 class="list-group-item-heading">Why are you applying for this job? (Word limit: 125)</h2>
+      <hr class="m-y-2">
+      <p class="list-group-item-text answer-text">
+        <b>Your team values resonate with me.</b> When I read about the way you think and work, I consistently find myself nodding in agreement. I know you guys haven’t figured out everything, so do I. Let's do it together. <br><br>
 
-  In a more practical way. I would try to reach people with the most influent tool of today: Social media. Therefore the difficulty is to have people’s attention. In order to do that I would make content that interest them, bringing them values.
+        I find satisfaction in creating something that helps even one person. I can only imagine how rewarding it must be to <b>help millions of people</b> <br><br>
 
-  Honestly I have no idea how to answer that question, but would love to hear your point of view.
-  </p>
-  <p>
-    <span class='counter'></span> words
-  </p>
+        I've made my research on your who you are and "googled" a lot of you. Especially Neal, Tuuli and Omar. Working with intelligent, dedicated colleagues sounds like a pretty great way to earn a living. I want to <b>work with people who care</b>. People who ask “why?”, and then shortly after, “How can we make this better?”. People with whom I share vision and values.
+      </p>
+      <p>
+        <span class="label label-default label-pill pull-xs-right counter"></span>
+      </p>
+    </li>
+    <li class="list-group-item">
+      <h2 class="list-group-item-heading">What's one idea, big or small, that you have for how technology can be used to advance social progress? (Suggested word limit: 200)</h2>
+      <hr class="m-y-2">
+      <p class="list-group-item-text answer-text">
+        Work in progress, TEXT TO REDO !!! <br><br><br>
+        Advancing social progress is an ambiguous word. It can have a lot of meaning, my definition behind it is how we can move people toward the right direction, because we can also move them to the wrong direction. Technology now enable to reach millions of people from a single click bringing them together when they are not browsing for cats pictures. So my little idea is to use that reach and make content that will either make people reflect and think. And let a chain of positive ideas spread unconsciously. Some people argue that this won’t make a difference and I don’t know if it makes a difference. But that won’t keep me away from trying.
+
+        In a more practical way. I would try to reach people with the most influent tool of today: Social media. Therefore the difficulty is to have people’s attention. In order to do that I would make content that interest them, bringing them values.
+
+        Honestly I have no idea how to answer that question, but would love to hear your point of view.
+      </p>
+      <p>
+        <span class="label label-default label-pill pull-xs-right counter"></span>
+      </p>
+    </li>
+    <li class="list-group-item">
+      <h2 class="list-group-item-heading">List which of the characteristics under “Big Pluses” you believe you match, with a few words of explanation if that’s useful (but keep it short!)</h2>
+      <hr class="m-y-2">
+      <ul class="list-group-item-text answer-text">
+        <li>Familiarity with the technologies SumOfUs use: Ruby on Rails, Javascript and AWS</li>
+        <li>
+        Knack for building responsive user interfaces that are beautiful and intuitive to use. My school was a design. Especially on how we can build simple and intuitive interface for people. I previously worked in building a marketing automation tool which teach me a lot about a/b testing and how to build for the maximum return.</li>
+        <li>Experience building mobile apps and websites.</li>
+        <li>Experience with non-profits. I helped build a humanitarian project in Bangladesh at 19 and also had an internship in Giving Corner, which helped motivate company employees being more sustainable by rewarding them with donation to non-profits.</li>
+        <li>Prior experience working on a remote team. I've never worked as a remote developer YET. But my previous team was split between Paris and Marseille.</li>
+        <li>Fluency in at least one non-English language. Born and raise in France.</li>
+      </ul>
+      <p>
+        <span class="label label-default label-pill pull-xs-right counter"></span>
+      </p>
+    </li>
+    <li class="list-group-item">
+      <h2 class="list-group-item-heading">A brief description of where you heard about this job posting</h2>
+      <hr class="m-y-2">
+      <p class="list-group-item-text answer-text">
+        One of my friend linked your job offer and told me: "Ça peut t'intéresser !". She was right.
+      </p>
+      <p>
+        <span class="label label-default label-pill pull-xs-right counter"></span>
+      </p>
+    </li>
+  </ul>
 </div>
 
 <div class="row">
-  <h2>List which of the characteristics under “Big Pluses” you believe you match, with a few words of explanation if that’s useful (but keep it short!)</h2>
-  <p class='answer-text'>
-Familiarity with the technologies Sum of Us use: Ruby on Rails, Javascript and AWS <br>
-Knack for building responsive user interfaces that are beautiful and intuitive to use. My school is a graphic oriented school. Especially on how we can build simple and intuitive interface for people. I previously worked in building a marketing automation tool which teach me a lot about a/b testing and how to build for the maximum return. <br>
-Experience building mobile apps and websites. 2 prototypes on iOS and I lost count on the number of websites
-Experience with non-profits. <br>
-I helped build a humanitarian project in Bangladesh at 19 and also had an internship in Giving Corner which helped motivate company employees being more sustainable by donating to non-profits. <br>
-Prior experience working on a remote team. I've never worked as a remote developer YET. But i've read the very famous "remote" book by 37signals (and all there other book by the way). I've also made my current company integrate slack, with the team being split between Paris and Marseille. <br>
-Fluency in at least one non-English language. Born and raise in France.
-  </p>
-  <p>
-    <span class='counter'></span> words
-  </p>
-</div>
-
-<div class="row">
-  <h2>A brief description of where you heard about this job posting</h2>
-  <p>
-    One of my friend linked your job offer and told me: This is the perfect company for you. She was right.
-  </p>
-</div>
-
-<div class="row">
-  <h2>End note</h2>
-  <p>
-    Thanks for taking the time to read through this.
-    I would be excited and honored to be a part of SumOfUs. <br>
-    <%= greet %>
-  </p>
-</div>
-
-<div class="row">
-  <h2>Information</h2>
-  <p>
-    <%= fa_icon "pencil-square-o" %> <%= link_to 'http://philippetring.fr/vitae', target: '_blank' do "Resumé" end %> <br>
-    <%= fa_icon "github" %> <%= link_to 'https://github.com/Gnirt/', target: '_blank' do "Github" end %> <br>
-    <%= fa_icon "bullhorn" %> <%= link_to 'http://philippetring.fr', target: '_blank' do "Blog, taken from my daily private journal" end %> <br>
-    <%= fa_icon "envelope" %> <%= mail_to 'philippetring+sum_of_us_application@gmail.com', subject: '[SumOfUs] We love your application', body: 'Hey Philippe,' do %>
-    philippetring at gmail dot com
-    <% end %>
-  </p>
+  <div class="jumbotron">
+    <h1 class="display-3"><%= greet %></h1>
+    <p class="lead">
+      Thanks for taking the time to read through this.
+      I would be excited and honored to be a part of SumOfUs.</p>
+    <hr class="m-y-2">
+    <p>- Philippe Tring</p>
+  </div>
 </div>
