--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#main-article {
+  margin-top: 100px;
+}
+
+.list-group-item-heading {
+  margin-top: 5px;
+}
+
+body { padding-bottom: 70px; }
