--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,42 @@
   </head>
 
   <body id="<%= "#{controller.controller_name}-#{controller.action_name}" %>" class="<%= "#{controller.controller_name}" %>">
-    <%= yield %>
+    <nav class="navbar navbar-fixed-bottom navbar-light bg-faded">
+      <div class="container">
+        <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
+          &#9776;
+        </button>
+        <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
+          <a class="navbar-brand" href="#"> <%= image_tag 'http://sumofus.org/wp-content/themes/pgm/img/logo.png', alt: 'SumOfUs', width: 40 %></a>
+          <ul class="nav navbar-nav">
+            <li class="nav-item">
+              <%= link_to 'http://philippetring.fr/vitae', target: '_blank', class: 'nav-link' do %>
+                <%= fa_icon "pencil-square-o" %> Resumé
+              <% end %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'https://github.com/Gnirt/', target: '_blank', class: 'nav-link' do %>
+                <%= fa_icon "github" %> Github
+              <% end %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'http://philippetring.fr', target: '_blank', class: 'nav-link' do %>
+                <%= fa_icon "bullhorn" %> Blog
+              <% end %>
+            </li>
+            <li class="nav-item">
+              <%= mail_to 'philippetring+sum_of_us_application@gmail.com', subject: '[SumOfUs] We love your application', body: 'Hey Philippe,', class: "nav-link" do %>
+                <%= fa_icon "envelope" %> philippetring[at]gmail.com
+              <% end %>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <article id="main-article">
+        <%= yield %>
+      </article>
+    </div>
   </body>
 </html>
