change root and add some space

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -66,7 +66,7 @@
   </ul>
 </div>
 
-<div class="row">
+<div class="row margin-top-2rem">
   <div class="jumbotron">
     <h1 class="display-3"><%= greet %></h1>
     <p class="lead">
