--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,9 +12,9 @@
       <h2 class="list-group-item-heading">Why are you applying for this job? (Word limit: 125)</h2>
       <hr class="m-y-2">
       <p class="list-group-item-text answer-text">
-        <b>Your team values resonate with me.</b> When I read about the way you think and work, I consistently find myself nodding in agreement. I know you guys haven’t figured out everything, so do I. Let's do it together. <br><br>
+        <b>Your team values resonate with me.</b> While I was reading about the way you think<a id='footnote1top' href="#footnote1">[1]</a> and work<a id='footnote2top' href="#footnote2">[2]</a>, I found myself nodding in agreement at every line. I know you guys haven’t figured out everything yet: neither have I. Let's do it together.<br><br>
 
-        I find satisfaction in creating something that helps even one person. I can only imagine how rewarding it must be to <b>help millions of people</b> <br><br>
+       I find great satisfaction in creating something that helps even one single person. I can only imagine how rewarding it must be to <b>help millions of people.</b> <br><br>
 
         I've made my research on your who you are and "googled" a lot of you. Especially Neal, Tuuli and Omar. Working with intelligent, dedicated colleagues sounds like a pretty great way to earn a living. I want to <b>work with people who care</b>. People who ask “why?”, and then shortly after, “How can we make this better?”. People with whom I share vision and values.
       </p>
@@ -26,12 +26,13 @@
       <h2 class="list-group-item-heading">What's one idea, big or small, that you have for how technology can be used to advance social progress? (Suggested word limit: 200)</h2>
       <hr class="m-y-2">
       <p class="list-group-item-text answer-text">
-        Work in progress, TEXT TO REDO !!! <br><br><br>
-        Advancing social progress is an ambiguous word. It can have a lot of meaning, my definition behind it is how we can move people toward the right direction, because we can also move them to the wrong direction. Technology now enable to reach millions of people from a single click bringing them together when they are not browsing for cats pictures. So my little idea is to use that reach and make content that will either make people reflect and think. And let a chain of positive ideas spread unconsciously. Some people argue that this won’t make a difference and I don’t know if it makes a difference. But that won’t keep me away from trying.
+        Advancing social progress is a vague phrase which can have a lot of meaning. The way I see it is that social progress is the advancement of people, individually and collectively, towards a better them, towards a better world. <br><br>
 
-        In a more practical way. I would try to reach people with the most influent tool of today: Social media. Therefore the difficulty is to have people’s attention. In order to do that I would make content that interest them, bringing them values.
+        Not to sound idealistic, but the truth is that with technology, we can achieve a lot. Technology now enables us to reach millions of people with a single click. I believe that we can create meaningful content that uses this power to reach a great number of people across the planet. <br><br>
 
-        Honestly I have no idea how to answer that question, but would love to hear your point of view.
+        But technology is a means; what really matters is content. Which is why I'd be glad to put my own technical skills to use to build technological tools that carry projects that matter and that promote social progress, like yours. <br><br>
+
+        For me, the best technology is extremely efficient yet almost invisible, making room for the content they carry, and helping to spread a chain of positive ideas almost unconsciously.
       </p>
       <p>
         <span class="label label-default label-pill pull-xs-right counter"></span>
@@ -40,15 +41,15 @@
     <li class="list-group-item">
       <h2 class="list-group-item-heading">List which of the characteristics under “Big Pluses” you believe you match, with a few words of explanation if that’s useful (but keep it short!)</h2>
       <hr class="m-y-2">
-      <ul class="list-group-item-text answer-text">
-        <li>Familiarity with the technologies SumOfUs use: Ruby on Rails, Javascript and AWS</li>
-        <li>
-        Knack for building responsive user interfaces that are beautiful and intuitive to use. My school was a design. Especially on how we can build simple and intuitive interface for people. I previously worked in building a marketing automation tool which teach me a lot about a/b testing and how to build for the maximum return.</li>
-        <li>Experience building mobile apps and websites.</li>
-        <li>Experience with non-profits. I helped build a humanitarian project in Bangladesh at 19 and also had an internship in Giving Corner, which helped motivate company employees being more sustainable by rewarding them with donation to non-profits.</li>
-        <li>Prior experience working on a remote team. I've never worked as a remote developer YET. But my previous team was split between Paris and Marseille.</li>
-        <li>Fluency in at least one non-English language. Born and raise in France.</li>
-      </ul>
+      <p class="list-group-item-text answer-text">
+        <%= fa_icon "check-square-o" %> <i>Familiarity with the technologies SumOfUs use: Ruby on Rails, Javascript and AWS</i><br>
+        <%= fa_icon "check-square-o" %>
+        <i>Knack for building responsive user interfaces that are beautiful and intuitive to use.</i> My school was a design school, where I learnt how to build simple and intuitive interfaces for people. I previously worked on building a marketing automation tool, and this taught me a lot about a/b testing and how to build for maximum return. <br>
+        <%= fa_icon "check-square-o" %> <i>Experience building mobile apps and websites.</i><br>
+        <%= fa_icon "check-square-o" %> <i>Experience with non-profits.</i> I helped build a humanitarian project from scratch in Bangladesh when I was 19 and also had an internship at Giving Corner, a company which helps motivate other companies' employees to be more sustainable by rewarding them with donations to non-profits. <br>
+        <%= fa_icon "square-o" %> <i>Prior experience working on a remote team.</i> I've never worked as a remote developer yet. But my previous team was split between Paris and Marseille, so I've experienced some form of remote team work. I'm also an avid reader and wanted to start working remotely since I read <i>Remote</i> by 37signals.<br>
+        <%= fa_icon "check-square-o" %> <i>Fluency in at least one non-English language.</i> I was born and raised in France.
+      </p>
       <p>
         <span class="label label-default label-pill pull-xs-right counter"></span>
       </p>
@@ -57,7 +58,7 @@
       <h2 class="list-group-item-heading">A brief description of where you heard about this job posting</h2>
       <hr class="m-y-2">
       <p class="list-group-item-text answer-text">
-        One of my friend linked your job offer and told me: "Ça peut t'intéresser !". She was right.
+        One of my friends linked your job offer and told me: "This job was made for you!". I think she was right.
       </p>
       <p>
         <span class="label label-default label-pill pull-xs-right counter"></span>
@@ -74,5 +75,11 @@
       I would be excited and honored to be a part of SumOfUs.</p>
     <hr class="m-y-2">
     <p>- Philippe Tring</p>
+  </div>
+  <div class="col-md-12">
+    <p>
+      <a id="footnote1" href="#footnote1top">[1]</a> - <%= link_to 'We are experimental and risk-takers: My "Don\'t be fearless" article', 'http://philippetring.fr/blog/2016/03/13/dont-be-fearless/', target: '_blank' %> <br>
+      <a id="footnote2" href="#footnote2top">[2]</a> - <%= link_to 'We are open, authentic and transparent: My "Honesty value" article', 'http://philippetring.fr/blog/2016/01/10/honesty/', target: '_blank' %>
+    </p>
   </div>
 </div>
