more space for better reading

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,6 @@
           &#9776;
         </button>
         <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-          <a class="navbar-brand" href="#"> <%= image_tag 'http://sumofus.org/wp-content/themes/pgm/img/logo.png', alt: 'SumOfUs', width: 40 %></a>
           <ul class="nav navbar-nav">
             <li class="nav-item">
               <%= link_to 'http://philippetring.fr/vitae', target: '_blank', class: 'nav-link' do %>
@@ -38,6 +37,7 @@
                 <%= fa_icon "envelope" %> philippetring[at]gmail.com
               <% end %>
             </li>
+            <a class="navbar-brand pull-xs-right" href="#"> <%= image_tag 'http://sumofus.org/wp-content/themes/pgm/img/logo.png', alt: 'SumOfUs', width: 40 %></a>
           </ul>
         </div>
       </div>
