--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -26,13 +26,13 @@
       <h2 class="list-group-item-heading">What's one idea, big or small, that you have for how technology can be used to advance social progress? (Suggested word limit: 200)</h2>
       <hr class="m-y-2">
       <p class="list-group-item-text answer-text">
-        Advancing social progress is a vague phrase which can have a lot of meaning. The way I see it is that social progress is the advancement of people, individually and collectively, towards a better them, towards a better world. <br><br>
+        Advancing social progress is a vague phrase which can have a lot of meaning. The way I see it is that social progress is the advancement of people, <b>individually and collectively</b>, towards a better them, <b>towards a better world</b>. <br><br>
 
-        Not to sound idealistic, but the truth is that with technology, we can achieve a lot. Technology now enables us to reach millions of people with a single click. I believe that we can create meaningful content that uses this power to reach a great number of people across the planet. <br><br>
+        Not to sound idealistic, but the truth is that with technology, we can achieve a lot. Technology now enables us to reach <b>millions of people with a single click</b>. I believe that we can create <b>meaningful content that uses this power</b> to reach a great number of people across the planet. <br><br>
 
-        But technology is a means; what really matters is content. Which is why I'd be glad to put my own technical skills to use to build technological tools that carry projects that matter and that promote social progress, like yours. <br><br>
+        But technology is a means; what really matters is content. Which is why I'd be glad to put my own technical skills to use to build technological tools that <b>carry projects that matter</b> and that promote social progress, like yours. <br><br>
 
-        For me, the best technology is extremely efficient yet almost invisible, making room for the content they carry, and helping to spread a chain of positive ideas almost unconsciously.
+        For me, the best technology is extremely efficient yet almost invisible, making room for the content they carry, and helping to <b>spread a chain of positive ideas</b> almost unconsciously.
       </p>
       <p>
         <span class="label label-default label-pill pull-xs-right counter"></span>
@@ -42,13 +42,17 @@
       <h2 class="list-group-item-heading">List which of the characteristics under “Big Pluses” you believe you match, with a few words of explanation if that’s useful (but keep it short!)</h2>
       <hr class="m-y-2">
       <p class="list-group-item-text answer-text">
-        <%= fa_icon "check-square-o" %> <i>Familiarity with the technologies SumOfUs use: Ruby on Rails, Javascript and AWS</i><br>
+        <%= fa_icon "check-square-o" %> <i>Familiarity with the technologies SumOfUs use: Ruby on Rails, Javascript and AWS.</i><br>
         <%= fa_icon "check-square-o" %>
-        <i>Knack for building responsive user interfaces that are beautiful and intuitive to use.</i> My school was a design school, where I learnt how to build simple and intuitive interfaces for people. I previously worked on building a marketing automation tool, and this taught me a lot about a/b testing and how to build for maximum return. <br>
+        <i>Knack for building responsive user interfaces that are beautiful and intuitive to use.</i> <br>
+        My school was a design school, where I learnt how to build simple and intuitive interfaces for people. I previously worked on building a marketing automation tool, and this taught me a lot about a/b testing and how to build for maximum return. <br>
         <%= fa_icon "check-square-o" %> <i>Experience building mobile apps and websites.</i><br>
-        <%= fa_icon "check-square-o" %> <i>Experience with non-profits.</i> I helped build a humanitarian project from scratch in Bangladesh when I was 19 and also had an internship at Giving Corner, a company which helps motivate other companies' employees to be more sustainable by rewarding them with donations to non-profits. <br>
-        <%= fa_icon "square-o" %> <i>Prior experience working on a remote team.</i> I've never worked as a remote developer yet. But my previous team was split between Paris and Marseille, so I've experienced some form of remote team work. I'm also an avid reader and wanted to start working remotely since I read <i>Remote</i> by 37signals.<br>
-        <%= fa_icon "check-square-o" %> <i>Fluency in at least one non-English language.</i> I was born and raised in France.
+        <%= fa_icon "check-square-o" %> <i>Experience with non-profits.</i> <br>
+        I helped build a humanitarian project from scratch in Bangladesh when I was 19 and also had an internship at Giving Corner, a company which helps motivate other companies' employees to be more sustainable by rewarding them with donations to non-profits. <br>
+        <%= fa_icon "square-o" %> <i>Prior experience working on a remote team.</i> <br>
+        I've never worked as a remote developer yet. But my previous team was split between Paris and Marseille, so I've experienced some form of remote team work. I'm also an avid reader and wanted to start working remotely since I read <i>Remote</i> by 37signals.<br>
+        <%= fa_icon "check-square-o" %> <i>Fluency in at least one non-English language.</i> <br>
+        I was born and raised in France.
       </p>
       <p>
         <span class="label label-default label-pill pull-xs-right counter"></span>
@@ -58,7 +62,7 @@
       <h2 class="list-group-item-heading">A brief description of where you heard about this job posting</h2>
       <hr class="m-y-2">
       <p class="list-group-item-text answer-text">
-        One of my friends linked your job offer and told me: "This job was made for you!". I think she was right.
+        One of my friends linked your job offer and told me: <i>"This job was made for you!"</i>. I think she was right.
       </p>
       <p>
         <span class="label label-default label-pill pull-xs-right counter"></span>
