--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,11 +12,12 @@
       <h2 class="list-group-item-heading">Why are you applying for this job? (Word limit: 125)</h2>
       <hr class="m-y-2">
       <p class="list-group-item-text answer-text">
-        <b>Your team values resonate with me.</b> While I was reading about the way you think<a id='footnote1top' href="#footnote1">[1]</a> and work<a id='footnote2top' href="#footnote2">[2]</a>, I found myself nodding in agreement at every line. I know you guys haven’t figured out everything yet: neither have I. Let's do it together.<br><br>
+        <!-- <a id='footnote2top' href="#footnote2">[2]</a> -->
+        <b>Your team values resonate with me.</b> While I was reading about the way you think and work<a id='footnote1top' href="#footnote1">[1]</a>, I found myself nodding in agreement at every line. I know you guys haven’t figured out everything yet: neither have I. Let's do it together.<br><br>
 
        I find great satisfaction in creating something that helps even one single person. I can only imagine how rewarding it must be to <b>help millions of people.</b> <br><br>
 
-        I've made my research on your who you are and "googled" a lot of you. Especially Neal, Tuuli and Omar. Working with intelligent, dedicated colleagues sounds like a pretty great way to earn a living. I want to <b>work with people who care</b>. People who ask “why?”, and then shortly after, “How can we make this better?”. People with whom I share vision and values.
+        I've done my research on your who you are and "googled" a lot of you. Especially Neal, Tuuli and Omar. Working with intelligent, dedicated colleagues sounds like a pretty great way to earn a living. I want to <b>work with people who care</b>. People who ask “why?”, and then shortly after, “How can we make this better?”. People with whom I share vision and values.
       </p>
       <p>
         <span class="label label-default label-pill pull-xs-right counter"></span>
@@ -26,11 +27,11 @@
       <h2 class="list-group-item-heading">What's one idea, big or small, that you have for how technology can be used to advance social progress? (Suggested word limit: 200)</h2>
       <hr class="m-y-2">
       <p class="list-group-item-text answer-text">
-        Advancing social progress is a vague phrase which can have a lot of meaning. The way I see it is that social progress is the advancement of people, <b>individually and collectively</b>, towards a better them, <b>towards a better world</b>. <br><br>
+        Advancing social progress is a vague phrase which can have a lot of meanings. The way I see it is that social progress is the advancement of people, <b>individually and collectively</b>, towards a better them, <b>towards a better world</b>. <br><br>
 
         Not to sound idealistic, but the truth is that with technology, we can achieve a lot. Technology now enables us to reach <b>millions of people with a single click</b>. I believe that we can create <b>meaningful content that uses this power</b> to reach a great number of people across the planet. <br><br>
 
-        But technology is a means; what really matters is content. Which is why I'd be glad to put my own technical skills to use to build technological tools that <b>carry projects that matter</b> and that promote social progress, like yours. <br><br>
+        But technology is a means ; what really matters is content. Which is why I'd be glad to put my own technical skills to use to build technological tools that <b>carry projects that matter</b> and that promote social progress, like yours. <br><br>
 
         For me, the best technology is extremely efficient yet almost invisible, making room for the content they carry, and helping to <b>spread a chain of positive ideas</b> almost unconsciously.
       </p>
@@ -83,7 +84,7 @@
   <div class="col-md-12">
     <p>
       <a id="footnote1" href="#footnote1top">[1]</a> - <%= link_to 'We are experimental and risk-takers: My "Don\'t be fearless" article', 'http://philippetring.fr/blog/2016/03/13/dont-be-fearless/', target: '_blank' %> <br>
-      <a id="footnote2" href="#footnote2top">[2]</a> - <%= link_to 'We are open, authentic and transparent: My "Honesty value" article', 'http://philippetring.fr/blog/2016/01/10/honesty/', target: '_blank' %>
+      <!-- <a id="footnote2" href="#footnote2top">[2]</a> - <%= link_to 'We are open, authentic and transparent: My "Honesty value" article', 'http://philippetring.fr/blog/2016/01/10/honesty/', target: '_blank' %> -->
     </p>
   </div>
 </div>
