--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -17,7 +17,7 @@
 
        I find great satisfaction in creating something that helps even one single person. I can only imagine how rewarding it must be to <b>help millions of people.</b> <br><br>
 
-        I've done my research on your who you are and "googled" a lot of you. Especially Neal, Tuuli and Omar. Working with intelligent, dedicated colleagues sounds like a pretty great way to earn a living. I want to <b>work with people who care</b>. People who ask “why?”, and then shortly after, “How can we make this better?”. People with whom I share vision and values.
+        I've done my research on who you are and "googled" a lot of you. Especially Neal, Tuuli and Omar. Working with intelligent, dedicated colleagues sounds like a pretty great way to earn a living. I want to <b>work with people who care</b>. People who ask “why?”, and then shortly after, “How can we make this better?”. People with whom I share vision and values.
       </p>
       <p>
         <span class="label label-default label-pill pull-xs-right counter"></span>
